--- a/css/reset.css
+++ b/css/reset.css
@@ -1,17 +1,32 @@
-body{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-p, h1, h2, h3, h4, h5, h6{
-margin: 0;
-padding: 0;
-} 
-ul{
-margin: 0;
-padding: 0;
-list-style: none;
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    padding: 0;
 }
-a{
-text-decoration: none;
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.introduce {
+    margin: 0;
+    padding: 0;
+
 }
