--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,21 @@ body {
 .introduce {
     background-color: var(--nav-color);
     color: var(--text-color);
+    padding-bottom: 170px;
 }
 
 .introduce-wrap {
-     display: flex;
+    display: flex;
+    align-items: center;
+}
+
+.text-wrap {
+    margin-right: 437px;
+    margin-left: 150px;
+}
+
+.introduce-title {
+    font-style: 64px;
+    font-weight: 700;
+
 }
