--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,11 @@ body {
 }
 
 .introduce-title {
-    font-style: 64px;
+    font-size: 64px;
     font-weight: 700;
+}
+.introduce-text{
 
+
+    
 }
