--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,21 @@ width: 500px;
 .footer-item{
     flex-basis: calc((100% - 50px) / 3);
 }
+.footer-list-wrap{
+display: flex;
+width: 800px;
+margin-bottom: 63px;
+}
+.footer-list-one{
+margin-right: 239px;
+}
+.footer-desrciption{
+padding-top: 63px;
+border-top: 1px solid var(--text-color);
+}
+.footer-desrciption-text{
+opacity: 0.5;
+text-align: center;
+font-weight: 400;
+font-size: 20px;
+}
