--- a/css/reset.css
+++ b/css/reset.css
@@ -29,8 +29,13 @@ a {
     margin: 0;
     padding: 0;
 }
+
 .container {
     width: 1650px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+html{
+    scroll-behavior: smooth;
 }
